#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

RH-2012-05-23-0:  CVS:        created GE 2011.11p1
                              - all new changes are for GE 2011.11 update 1

RH-2012-04-25-0:  Enhancem.   Cygwin port

RH-2012-04-23-3:  Cleanup     Misc. cleanups

RH-2012-04-23-2:  Enhancem.   Enhance log file handling

RH-2012-04-23-1:  Bugfix:     Fix buffer overflow in sgepasswd

RH-2012-04-23-0:  Bugfix:     Security fix - code injection via LD_*

RH-2012-04-15-0:  Bugfix:     file descriptors closed too soon in shepherd
                              (from Brooks Davis, with cleanup from Ron Chen)

RH-2012-04-13-2:  Cleanup     Remove arch.dist

RH-2012-04-13-1:  Enhancem.   hwloc build changes

RH-2012-04-13-0:  Enhancem.   Misc GUI Installer cleanup - part 1

RH-2012-04-11-0:  Enhancem.   Preparing for the GE 2011.11 patch 1 release

RH-2012-04-10-0:  Bugfix:     Merge in Sun's JG-2010-01-13-0:
                              - execd does not verify the pe task start user in
                                non CSP mode

RH-2012-03-20-3:  Misc.       -Wno-strict-aliasing is needed for -Werror

RH-2012-03-20-2:  Enhancem.   qmon is now optional

RH-2012-03-20-1:  Enhancem.   LessTif support (from Fedora)

RH-2012-03-20-0:  Enhancem.   Quick fix for Solaris 11

RH-2012-03-18-0:  Enhancem.   Reduce the no. of X11 libs for libXltree link line

RH-2012-03-17-5:  Bugfix:     Changes for OpenSSL API diff. 

RH-2012-03-17-4:  Enhancem.   Fine-grained CheckBinaries()

RH-2012-03-17-3:  Enhancem.   remove unused -R compiler flag in qtcsh

RH-2012-03-17-2:  Enhancem.   include header file for NetBSD & FreeBSD
